CSS styling fixes to look better on smaller screens

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,8 +2,7 @@
 	color: white;
 	font-size: xx-large;
 	position: absolute;
-	float: center;
-	left: 45%
+	left: 40%
 }
 
 body {
@@ -11,35 +10,40 @@ body {
 }
 
 #canvas1 {
-	position:absolute;
+	position:relative;
 	border: 3px solid white;
+	// float:inherit;
 	width: 800px;
 	height: 700px;
-	transform: translate(-50%, -50%);
+	transform: translate(-80%, 10%);
 	top: 50%;
 	left: 50%;
+	margin: 5px;
 }
 
 #Controls {
-	position: absolute;
-	float: left;
+	position: relative;
 	width: 150px;
+	float: left;
 	height: min-content;
 	color: white;
 	border: 3px solid white;
 	list-style: none;
-	top: 50%;
-	right: 75%;
+	top: 400px;
+	right: 0px;
+	margin: 10px;
 }
 
 #About {
-	position: absolute;
+	position: relative;
+	list-style: none;
 	float: right;
 	border: 3px solid white;
 	width: 150px;
 	height: 150px;
-	top: 45%;
-	right: 15%;
+	top: 350px;
+	right: 0%;
+	margin: 10px;
 }
 
 #linkedin {
